src/datecalc/snapshots/calcard__datecalc__recurrence__tests__daily_every_20_minutes_9am_to_440pm.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take(100))
---
1997-09-02T09:00:00-04:00[America/New_York]
1997-09-02T09:20:00-04:00[America/New_York]
1997-09-02T09:40:00-04:00[America/New_York]
1997-09-02T10:00:00-04:00[America/New_York]
1997-09-02T10:20:00-04:00[America/New_York]
1997-09-02T10:40:00-04:00[America/New_York]
1997-09-02T11:00:00-04:00[America/New_York]
1997-09-02T11:20:00-04:00[America/New_York]
1997-09-02T11:40:00-04:00[America/New_York]
1997-09-02T12:00:00-04:00[America/New_York]
1997-09-02T12:20:00-04:00[America/New_York]
1997-09-02T12:40:00-04:00[America/New_York]
1997-09-02T13:00:00-04:00[America/New_York]
1997-09-02T13:20:00-04:00[America/New_York]
1997-09-02T13:40:00-04:00[America/New_York]
1997-09-02T14:00:00-04:00[America/New_York]
1997-09-02T14:20:00-04:00[America/New_York]
1997-09-02T14:40:00-04:00[America/New_York]
1997-09-02T15:00:00-04:00[America/New_York]
1997-09-02T15:20:00-04:00[America/New_York]
1997-09-02T15:40:00-04:00[America/New_York]
1997-09-02T16:00:00-04:00[America/New_York]
1997-09-02T16:20:00-04:00[America/New_York]
1997-09-02T16:40:00-04:00[America/New_York]
1997-09-03T09:00:00-04:00[America/New_York]
1997-09-03T09:20:00-04:00[America/New_York]
1997-09-03T09:40:00-04:00[America/New_York]
1997-09-03T10:00:00-04:00[America/New_York]
1997-09-03T10:20:00-04:00[America/New_York]
1997-09-03T10:40:00-04:00[America/New_York]
1997-09-03T11:00:00-04:00[America/New_York]
1997-09-03T11:20:00-04:00[America/New_York]
1997-09-03T11:40:00-04:00[America/New_York]
1997-09-03T12:00:00-04:00[America/New_York]
1997-09-03T12:20:00-04:00[America/New_York]
1997-09-03T12:40:00-04:00[America/New_York]
1997-09-03T13:00:00-04:00[America/New_York]
1997-09-03T13:20:00-04:00[America/New_York]
1997-09-03T13:40:00-04:00[America/New_York]
1997-09-03T14:00:00-04:00[America/New_York]
1997-09-03T14:20:00-04:00[America/New_York]
1997-09-03T14:40:00-04:00[America/New_York]
1997-09-03T15:00:00-04:00[America/New_York]
1997-09-03T15:20:00-04:00[America/New_York]
1997-09-03T15:40:00-04:00[America/New_York]
1997-09-03T16:00:00-04:00[America/New_York]
1997-09-03T16:20:00-04:00[America/New_York]
1997-09-03T16:40:00-04:00[America/New_York]
1997-09-04T09:00:00-04:00[America/New_York]
1997-09-04T09:20:00-04:00[America/New_York]
1997-09-04T09:40:00-04:00[America/New_York]
1997-09-04T10:00:00-04:00[America/New_York]
1997-09-04T10:20:00-04:00[America/New_York]
1997-09-04T10:40:00-04:00[America/New_York]
1997-09-04T11:00:00-04:00[America/New_York]
1997-09-04T11:20:00-04:00[America/New_York]
1997-09-04T11:40:00-04:00[America/New_York]
1997-09-04T12:00:00-04:00[America/New_York]
1997-09-04T12:20:00-04:00[America/New_York]
1997-09-04T12:40:00-04:00[America/New_York]
1997-09-04T13:00:00-04:00[America/New_York]
1997-09-04T13:20:00-04:00[America/New_York]
1997-09-04T13:40:00-04:00[America/New_York]
1997-09-04T14:00:00-04:00[America/New_York]
1997-09-04T14:20:00-04:00[America/New_York]
1997-09-04T14:40:00-04:00[America/New_York]
1997-09-04T15:00:00-04:00[America/New_York]
1997-09-04T15:20:00-04:00[America/New_York]
1997-09-04T15:40:00-04:00[America/New_York]
1997-09-04T16:00:00-04:00[America/New_York]
1997-09-04T16:20:00-04:00[America/New_York]
1997-09-04T16:40:00-04:00[America/New_York]
1997-09-05T09:00:00-04:00[America/New_York]
1997-09-05T09:20:00-04:00[America/New_York]
1997-09-05T09:40:00-04:00[America/New_York]
1997-09-05T10:00:00-04:00[America/New_York]
1997-09-05T10:20:00-04:00[America/New_York]
1997-09-05T10:40:00-04:00[America/New_York]
1997-09-05T11:00:00-04:00[America/New_York]
1997-09-05T11:20:00-04:00[America/New_York]
1997-09-05T11:40:00-04:00[America/New_York]
1997-09-05T12:00:00-04:00[America/New_York]
1997-09-05T12:20:00-04:00[America/New_York]
1997-09-05T12:40:00-04:00[America/New_York]
1997-09-05T13:00:00-04:00[America/New_York]
1997-09-05T13:20:00-04:00[America/New_York]
1997-09-05T13:40:00-04:00[America/New_York]
1997-09-05T14:00:00-04:00[America/New_York]
1997-09-05T14:20:00-04:00[America/New_York]
1997-09-05T14:40:00-04:00[America/New_York]
1997-09-05T15:00:00-04:00[America/New_York]
1997-09-05T15:20:00-04:00[America/New_York]
1997-09-05T15:40:00-04:00[America/New_York]
1997-09-05T16:00:00-04:00[America/New_York]
1997-09-05T16:20:00-04:00[America/New_York]
1997-09-05T16:40:00-04:00[America/New_York]
1997-09-06T09:00:00-04:00[America/New_York]
1997-09-06T09:20:00-04:00[America/New_York]
1997-09-06T09:40:00-04:00[America/New_York]
1997-09-06T10:00:00-04:00[America/New_York]
