src/datecalc/snapshots/calcard__datecalc__recurrence__tests__daily_every_day_in_january_for_three_years.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
1998-01-01T09:00:00-05:00[America/New_York]
1998-01-02T09:00:00-05:00[America/New_York]
1998-01-03T09:00:00-05:00[America/New_York]
1998-01-04T09:00:00-05:00[America/New_York]
1998-01-05T09:00:00-05:00[America/New_York]
1998-01-06T09:00:00-05:00[America/New_York]
1998-01-07T09:00:00-05:00[America/New_York]
1998-01-08T09:00:00-05:00[America/New_York]
1998-01-09T09:00:00-05:00[America/New_York]
1998-01-10T09:00:00-05:00[America/New_York]
1998-01-11T09:00:00-05:00[America/New_York]
1998-01-12T09:00:00-05:00[America/New_York]
1998-01-13T09:00:00-05:00[America/New_York]
1998-01-14T09:00:00-05:00[America/New_York]
1998-01-15T09:00:00-05:00[America/New_York]
1998-01-16T09:00:00-05:00[America/New_York]
1998-01-17T09:00:00-05:00[America/New_York]
1998-01-18T09:00:00-05:00[America/New_York]
1998-01-19T09:00:00-05:00[America/New_York]
1998-01-20T09:00:00-05:00[America/New_York]
1998-01-21T09:00:00-05:00[America/New_York]
1998-01-22T09:00:00-05:00[America/New_York]
1998-01-23T09:00:00-05:00[America/New_York]
1998-01-24T09:00:00-05:00[America/New_York]
1998-01-25T09:00:00-05:00[America/New_York]
1998-01-26T09:00:00-05:00[America/New_York]
1998-01-27T09:00:00-05:00[America/New_York]
1998-01-28T09:00:00-05:00[America/New_York]
1998-01-29T09:00:00-05:00[America/New_York]
1998-01-30T09:00:00-05:00[America/New_York]
1998-01-31T09:00:00-05:00[America/New_York]
1999-01-01T09:00:00-05:00[America/New_York]
1999-01-02T09:00:00-05:00[America/New_York]
1999-01-03T09:00:00-05:00[America/New_York]
1999-01-04T09:00:00-05:00[America/New_York]
1999-01-05T09:00:00-05:00[America/New_York]
1999-01-06T09:00:00-05:00[America/New_York]
1999-01-07T09:00:00-05:00[America/New_York]
1999-01-08T09:00:00-05:00[America/New_York]
1999-01-09T09:00:00-05:00[America/New_York]
1999-01-10T09:00:00-05:00[America/New_York]
1999-01-11T09:00:00-05:00[America/New_York]
1999-01-12T09:00:00-05:00[America/New_York]
1999-01-13T09:00:00-05:00[America/New_York]
1999-01-14T09:00:00-05:00[America/New_York]
1999-01-15T09:00:00-05:00[America/New_York]
1999-01-16T09:00:00-05:00[America/New_York]
1999-01-17T09:00:00-05:00[America/New_York]
1999-01-18T09:00:00-05:00[America/New_York]
1999-01-19T09:00:00-05:00[America/New_York]
1999-01-20T09:00:00-05:00[America/New_York]
1999-01-21T09:00:00-05:00[America/New_York]
1999-01-22T09:00:00-05:00[America/New_York]
1999-01-23T09:00:00-05:00[America/New_York]
1999-01-24T09:00:00-05:00[America/New_York]
1999-01-25T09:00:00-05:00[America/New_York]
1999-01-26T09:00:00-05:00[America/New_York]
1999-01-27T09:00:00-05:00[America/New_York]
1999-01-28T09:00:00-05:00[America/New_York]
1999-01-29T09:00:00-05:00[America/New_York]
1999-01-30T09:00:00-05:00[America/New_York]
1999-01-31T09:00:00-05:00[America/New_York]
2000-01-01T09:00:00-05:00[America/New_York]
2000-01-02T09:00:00-05:00[America/New_York]
2000-01-03T09:00:00-05:00[America/New_York]
2000-01-04T09:00:00-05:00[America/New_York]
2000-01-05T09:00:00-05:00[America/New_York]
2000-01-06T09:00:00-05:00[America/New_York]
2000-01-07T09:00:00-05:00[America/New_York]
2000-01-08T09:00:00-05:00[America/New_York]
2000-01-09T09:00:00-05:00[America/New_York]
2000-01-10T09:00:00-05:00[America/New_York]
2000-01-11T09:00:00-05:00[America/New_York]
2000-01-12T09:00:00-05:00[America/New_York]
2000-01-13T09:00:00-05:00[America/New_York]
2000-01-14T09:00:00-05:00[America/New_York]
2000-01-15T09:00:00-05:00[America/New_York]
2000-01-16T09:00:00-05:00[America/New_York]
2000-01-17T09:00:00-05:00[America/New_York]
2000-01-18T09:00:00-05:00[America/New_York]
2000-01-19T09:00:00-05:00[America/New_York]
2000-01-20T09:00:00-05:00[America/New_York]
2000-01-21T09:00:00-05:00[America/New_York]
2000-01-22T09:00:00-05:00[America/New_York]
2000-01-23T09:00:00-05:00[America/New_York]
2000-01-24T09:00:00-05:00[America/New_York]
2000-01-25T09:00:00-05:00[America/New_York]
2000-01-26T09:00:00-05:00[America/New_York]
2000-01-27T09:00:00-05:00[America/New_York]
2000-01-28T09:00:00-05:00[America/New_York]
2000-01-29T09:00:00-05:00[America/New_York]
2000-01-30T09:00:00-05:00[America/New_York]
2000-01-31T09:00:00-05:00[America/New_York]
