src/datecalc/snapshots/calcard__datecalc__recurrence__tests__daily_until_dec24.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
1997-09-02T09:00:00-04:00[America/New_York]
1997-09-03T09:00:00-04:00[America/New_York]
1997-09-04T09:00:00-04:00[America/New_York]
1997-09-05T09:00:00-04:00[America/New_York]
1997-09-06T09:00:00-04:00[America/New_York]
1997-09-07T09:00:00-04:00[America/New_York]
1997-09-08T09:00:00-04:00[America/New_York]
1997-09-09T09:00:00-04:00[America/New_York]
1997-09-10T09:00:00-04:00[America/New_York]
1997-09-11T09:00:00-04:00[America/New_York]
1997-09-12T09:00:00-04:00[America/New_York]
1997-09-13T09:00:00-04:00[America/New_York]
1997-09-14T09:00:00-04:00[America/New_York]
1997-09-15T09:00:00-04:00[America/New_York]
1997-09-16T09:00:00-04:00[America/New_York]
1997-09-17T09:00:00-04:00[America/New_York]
1997-09-18T09:00:00-04:00[America/New_York]
1997-09-19T09:00:00-04:00[America/New_York]
1997-09-20T09:00:00-04:00[America/New_York]
1997-09-21T09:00:00-04:00[America/New_York]
1997-09-22T09:00:00-04:00[America/New_York]
1997-09-23T09:00:00-04:00[America/New_York]
1997-09-24T09:00:00-04:00[America/New_York]
1997-09-25T09:00:00-04:00[America/New_York]
1997-09-26T09:00:00-04:00[America/New_York]
1997-09-27T09:00:00-04:00[America/New_York]
1997-09-28T09:00:00-04:00[America/New_York]
1997-09-29T09:00:00-04:00[America/New_York]
1997-09-30T09:00:00-04:00[America/New_York]
1997-10-01T09:00:00-04:00[America/New_York]
1997-10-02T09:00:00-04:00[America/New_York]
1997-10-03T09:00:00-04:00[America/New_York]
1997-10-04T09:00:00-04:00[America/New_York]
1997-10-05T09:00:00-04:00[America/New_York]
1997-10-06T09:00:00-04:00[America/New_York]
1997-10-07T09:00:00-04:00[America/New_York]
1997-10-08T09:00:00-04:00[America/New_York]
1997-10-09T09:00:00-04:00[America/New_York]
1997-10-10T09:00:00-04:00[America/New_York]
1997-10-11T09:00:00-04:00[America/New_York]
1997-10-12T09:00:00-04:00[America/New_York]
1997-10-13T09:00:00-04:00[America/New_York]
1997-10-14T09:00:00-04:00[America/New_York]
1997-10-15T09:00:00-04:00[America/New_York]
1997-10-16T09:00:00-04:00[America/New_York]
1997-10-17T09:00:00-04:00[America/New_York]
1997-10-18T09:00:00-04:00[America/New_York]
1997-10-19T09:00:00-04:00[America/New_York]
1997-10-20T09:00:00-04:00[America/New_York]
1997-10-21T09:00:00-04:00[America/New_York]
1997-10-22T09:00:00-04:00[America/New_York]
1997-10-23T09:00:00-04:00[America/New_York]
1997-10-24T09:00:00-04:00[America/New_York]
1997-10-25T09:00:00-04:00[America/New_York]
1997-10-26T09:00:00-05:00[America/New_York]
1997-10-27T09:00:00-05:00[America/New_York]
1997-10-28T09:00:00-05:00[America/New_York]
1997-10-29T09:00:00-05:00[America/New_York]
1997-10-30T09:00:00-05:00[America/New_York]
1997-10-31T09:00:00-05:00[America/New_York]
1997-11-01T09:00:00-05:00[America/New_York]
1997-11-02T09:00:00-05:00[America/New_York]
1997-11-03T09:00:00-05:00[America/New_York]
1997-11-04T09:00:00-05:00[America/New_York]
1997-11-05T09:00:00-05:00[America/New_York]
1997-11-06T09:00:00-05:00[America/New_York]
1997-11-07T09:00:00-05:00[America/New_York]
1997-11-08T09:00:00-05:00[America/New_York]
1997-11-09T09:00:00-05:00[America/New_York]
1997-11-10T09:00:00-05:00[America/New_York]
1997-11-11T09:00:00-05:00[America/New_York]
1997-11-12T09:00:00-05:00[America/New_York]
1997-11-13T09:00:00-05:00[America/New_York]
1997-11-14T09:00:00-05:00[America/New_York]
1997-11-15T09:00:00-05:00[America/New_York]
1997-11-16T09:00:00-05:00[America/New_York]
1997-11-17T09:00:00-05:00[America/New_York]
1997-11-18T09:00:00-05:00[America/New_York]
1997-11-19T09:00:00-05:00[America/New_York]
1997-11-20T09:00:00-05:00[America/New_York]
1997-11-21T09:00:00-05:00[America/New_York]
1997-11-22T09:00:00-05:00[America/New_York]
1997-11-23T09:00:00-05:00[America/New_York]
1997-11-24T09:00:00-05:00[America/New_York]
1997-11-25T09:00:00-05:00[America/New_York]
1997-11-26T09:00:00-05:00[America/New_York]
1997-11-27T09:00:00-05:00[America/New_York]
1997-11-28T09:00:00-05:00[America/New_York]
1997-11-29T09:00:00-05:00[America/New_York]
1997-11-30T09:00:00-05:00[America/New_York]
1997-12-01T09:00:00-05:00[America/New_York]
1997-12-02T09:00:00-05:00[America/New_York]
1997-12-03T09:00:00-05:00[America/New_York]
1997-12-04T09:00:00-05:00[America/New_York]
1997-12-05T09:00:00-05:00[America/New_York]
1997-12-06T09:00:00-05:00[America/New_York]
1997-12-07T09:00:00-05:00[America/New_York]
1997-12-08T09:00:00-05:00[America/New_York]
1997-12-09T09:00:00-05:00[America/New_York]
1997-12-10T09:00:00-05:00[America/New_York]
1997-12-11T09:00:00-05:00[America/New_York]
1997-12-12T09:00:00-05:00[America/New_York]
1997-12-13T09:00:00-05:00[America/New_York]
1997-12-14T09:00:00-05:00[America/New_York]
1997-12-15T09:00:00-05:00[America/New_York]
1997-12-16T09:00:00-05:00[America/New_York]
1997-12-17T09:00:00-05:00[America/New_York]
1997-12-18T09:00:00-05:00[America/New_York]
1997-12-19T09:00:00-05:00[America/New_York]
1997-12-20T09:00:00-05:00[America/New_York]
1997-12-21T09:00:00-05:00[America/New_York]
1997-12-22T09:00:00-05:00[America/New_York]
1997-12-23T09:00:00-05:00[America/New_York]
