src/datecalc/snapshots/calcard__datecalc__recurrence__tests__yearly_every_thursday_only_in_june_july_aug.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
1997-06-05T09:00:00-04:00[America/New_York]
1997-06-12T09:00:00-04:00[America/New_York]
1997-06-19T09:00:00-04:00[America/New_York]
1997-06-26T09:00:00-04:00[America/New_York]
1997-07-03T09:00:00-04:00[America/New_York]
1997-07-10T09:00:00-04:00[America/New_York]
1997-07-17T09:00:00-04:00[America/New_York]
1997-07-24T09:00:00-04:00[America/New_York]
1997-07-31T09:00:00-04:00[America/New_York]
1997-08-07T09:00:00-04:00[America/New_York]
1997-08-14T09:00:00-04:00[America/New_York]
1997-08-21T09:00:00-04:00[America/New_York]
1997-08-28T09:00:00-04:00[America/New_York]
1998-06-04T09:00:00-04:00[America/New_York]
1998-06-11T09:00:00-04:00[America/New_York]
1998-06-18T09:00:00-04:00[America/New_York]
1998-06-25T09:00:00-04:00[America/New_York]
1998-07-02T09:00:00-04:00[America/New_York]
1998-07-09T09:00:00-04:00[America/New_York]
1998-07-16T09:00:00-04:00[America/New_York]
1998-07-23T09:00:00-04:00[America/New_York]
1998-07-30T09:00:00-04:00[America/New_York]
1998-08-06T09:00:00-04:00[America/New_York]
1998-08-13T09:00:00-04:00[America/New_York]
1998-08-20T09:00:00-04:00[America/New_York]
1998-08-27T09:00:00-04:00[America/New_York]
1999-06-03T09:00:00-04:00[America/New_York]
1999-06-10T09:00:00-04:00[America/New_York]
1999-06-17T09:00:00-04:00[America/New_York]
1999-06-24T09:00:00-04:00[America/New_York]
1999-07-01T09:00:00-04:00[America/New_York]
1999-07-08T09:00:00-04:00[America/New_York]
1999-07-15T09:00:00-04:00[America/New_York]
1999-07-22T09:00:00-04:00[America/New_York]
1999-07-29T09:00:00-04:00[America/New_York]
1999-08-05T09:00:00-04:00[America/New_York]
1999-08-12T09:00:00-04:00[America/New_York]
1999-08-19T09:00:00-04:00[America/New_York]
1999-08-26T09:00:00-04:00[America/New_York]
