src/datecalc/snapshots/calcard__datecalc__recurrence__tests__yearly_every_week_day_1998_in_some_weeks.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
1998-02-02T09:00:00-05:00[America/New_York]
1998-02-03T09:00:00-05:00[America/New_York]
1998-02-04T09:00:00-05:00[America/New_York]
1998-02-05T09:00:00-05:00[America/New_York]
1998-02-06T09:00:00-05:00[America/New_York]
1998-02-09T09:00:00-05:00[America/New_York]
1998-02-10T09:00:00-05:00[America/New_York]
1998-02-11T09:00:00-05:00[America/New_York]
1998-02-12T09:00:00-05:00[America/New_York]
1998-02-13T09:00:00-05:00[America/New_York]
1998-02-16T09:00:00-05:00[America/New_York]
1998-02-17T09:00:00-05:00[America/New_York]
1998-02-18T09:00:00-05:00[America/New_York]
1998-02-19T09:00:00-05:00[America/New_York]
1998-02-20T09:00:00-05:00[America/New_York]
1998-02-23T09:00:00-05:00[America/New_York]
1998-02-24T09:00:00-05:00[America/New_York]
1998-02-25T09:00:00-05:00[America/New_York]
1998-02-26T09:00:00-05:00[America/New_York]
1998-02-27T09:00:00-05:00[America/New_York]
1998-03-02T09:00:00-05:00[America/New_York]
1998-03-03T09:00:00-05:00[America/New_York]
1998-03-04T09:00:00-05:00[America/New_York]
1998-03-05T09:00:00-05:00[America/New_York]
1998-03-06T09:00:00-05:00[America/New_York]
