src/datecalc/snapshots/calcard__datecalc__recurrence__tests__yearly_every_week_day_jan_feb_1998_overlap_some_weeks.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
1998-01-19T09:00:00-05:00[America/New_York]
1998-01-20T09:00:00-05:00[America/New_York]
1998-01-21T09:00:00-05:00[America/New_York]
1998-01-22T09:00:00-05:00[America/New_York]
1998-01-23T09:00:00-05:00[America/New_York]
1998-01-26T09:00:00-05:00[America/New_York]
1998-01-27T09:00:00-05:00[America/New_York]
1998-01-28T09:00:00-05:00[America/New_York]
1998-01-29T09:00:00-05:00[America/New_York]
1998-01-30T09:00:00-05:00[America/New_York]
1998-02-02T09:00:00-05:00[America/New_York]
1998-02-03T09:00:00-05:00[America/New_York]
1998-02-04T09:00:00-05:00[America/New_York]
1998-02-05T09:00:00-05:00[America/New_York]
1998-02-06T09:00:00-05:00[America/New_York]
