src/datecalc/snapshots/calcard__datecalc__recurrence__tests__yearly_every_weekend_in_2025.snap
---
source: src/datecalc/recurrence.rs
expression: snapshot(rrule.iter().take_while(|zdt| *zdt <= until))
---
2025-01-04T09:00:00-05:00[America/New_York]
2025-01-05T09:00:00-05:00[America/New_York]
2025-01-11T09:00:00-05:00[America/New_York]
2025-01-12T09:00:00-05:00[America/New_York]
2025-01-18T09:00:00-05:00[America/New_York]
2025-01-19T09:00:00-05:00[America/New_York]
2025-01-25T09:00:00-05:00[America/New_York]
2025-01-26T09:00:00-05:00[America/New_York]
2025-02-01T09:00:00-05:00[America/New_York]
2025-02-02T09:00:00-05:00[America/New_York]
2025-02-08T09:00:00-05:00[America/New_York]
2025-02-09T09:00:00-05:00[America/New_York]
2025-02-15T09:00:00-05:00[America/New_York]
2025-02-16T09:00:00-05:00[America/New_York]
2025-02-22T09:00:00-05:00[America/New_York]
2025-02-23T09:00:00-05:00[America/New_York]
2025-03-01T09:00:00-05:00[America/New_York]
2025-03-02T09:00:00-05:00[America/New_York]
2025-03-08T09:00:00-05:00[America/New_York]
2025-03-09T09:00:00-04:00[America/New_York]
2025-03-15T09:00:00-04:00[America/New_York]
2025-03-16T09:00:00-04:00[America/New_York]
2025-03-22T09:00:00-04:00[America/New_York]
2025-03-23T09:00:00-04:00[America/New_York]
2025-03-29T09:00:00-04:00[America/New_York]
2025-03-30T09:00:00-04:00[America/New_York]
2025-04-05T09:00:00-04:00[America/New_York]
2025-04-06T09:00:00-04:00[America/New_York]
2025-04-12T09:00:00-04:00[America/New_York]
2025-04-13T09:00:00-04:00[America/New_York]
2025-04-19T09:00:00-04:00[America/New_York]
2025-04-20T09:00:00-04:00[America/New_York]
2025-04-26T09:00:00-04:00[America/New_York]
2025-04-27T09:00:00-04:00[America/New_York]
2025-05-03T09:00:00-04:00[America/New_York]
2025-05-04T09:00:00-04:00[America/New_York]
2025-05-10T09:00:00-04:00[America/New_York]
2025-05-11T09:00:00-04:00[America/New_York]
2025-05-17T09:00:00-04:00[America/New_York]
2025-05-18T09:00:00-04:00[America/New_York]
2025-05-24T09:00:00-04:00[America/New_York]
2025-05-25T09:00:00-04:00[America/New_York]
2025-05-31T09:00:00-04:00[America/New_York]
2025-06-01T09:00:00-04:00[America/New_York]
2025-06-07T09:00:00-04:00[America/New_York]
2025-06-08T09:00:00-04:00[America/New_York]
2025-06-14T09:00:00-04:00[America/New_York]
2025-06-15T09:00:00-04:00[America/New_York]
2025-06-21T09:00:00-04:00[America/New_York]
2025-06-22T09:00:00-04:00[America/New_York]
2025-06-28T09:00:00-04:00[America/New_York]
2025-06-29T09:00:00-04:00[America/New_York]
2025-07-05T09:00:00-04:00[America/New_York]
2025-07-06T09:00:00-04:00[America/New_York]
2025-07-12T09:00:00-04:00[America/New_York]
2025-07-13T09:00:00-04:00[America/New_York]
2025-07-19T09:00:00-04:00[America/New_York]
2025-07-20T09:00:00-04:00[America/New_York]
2025-07-26T09:00:00-04:00[America/New_York]
2025-07-27T09:00:00-04:00[America/New_York]
2025-08-02T09:00:00-04:00[America/New_York]
2025-08-03T09:00:00-04:00[America/New_York]
2025-08-09T09:00:00-04:00[America/New_York]
2025-08-10T09:00:00-04:00[America/New_York]
2025-08-16T09:00:00-04:00[America/New_York]
2025-08-17T09:00:00-04:00[America/New_York]
2025-08-23T09:00:00-04:00[America/New_York]
2025-08-24T09:00:00-04:00[America/New_York]
2025-08-30T09:00:00-04:00[America/New_York]
2025-08-31T09:00:00-04:00[America/New_York]
2025-09-06T09:00:00-04:00[America/New_York]
2025-09-07T09:00:00-04:00[America/New_York]
2025-09-13T09:00:00-04:00[America/New_York]
2025-09-14T09:00:00-04:00[America/New_York]
2025-09-20T09:00:00-04:00[America/New_York]
2025-09-21T09:00:00-04:00[America/New_York]
2025-09-27T09:00:00-04:00[America/New_York]
2025-09-28T09:00:00-04:00[America/New_York]
2025-10-04T09:00:00-04:00[America/New_York]
2025-10-05T09:00:00-04:00[America/New_York]
2025-10-11T09:00:00-04:00[America/New_York]
2025-10-12T09:00:00-04:00[America/New_York]
2025-10-18T09:00:00-04:00[America/New_York]
2025-10-19T09:00:00-04:00[America/New_York]
2025-10-25T09:00:00-04:00[America/New_York]
2025-10-26T09:00:00-04:00[America/New_York]
2025-11-01T09:00:00-04:00[America/New_York]
2025-11-02T09:00:00-05:00[America/New_York]
2025-11-08T09:00:00-05:00[America/New_York]
2025-11-09T09:00:00-05:00[America/New_York]
2025-11-15T09:00:00-05:00[America/New_York]
2025-11-16T09:00:00-05:00[America/New_York]
2025-11-22T09:00:00-05:00[America/New_York]
2025-11-23T09:00:00-05:00[America/New_York]
2025-11-29T09:00:00-05:00[America/New_York]
2025-11-30T09:00:00-05:00[America/New_York]
2025-12-06T09:00:00-05:00[America/New_York]
2025-12-07T09:00:00-05:00[America/New_York]
2025-12-13T09:00:00-05:00[America/New_York]
2025-12-14T09:00:00-05:00[America/New_York]
2025-12-20T09:00:00-05:00[America/New_York]
2025-12-21T09:00:00-05:00[America/New_York]
2025-12-27T09:00:00-05:00[America/New_York]
2025-12-28T09:00:00-05:00[America/New_York]
